globus-gsi-proxy-ssl (5.7-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Doxygen markup fixes
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 12:16:45 -0400

globus-gsi-proxy-ssl (5.6-4+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gsi-proxy-ssl (5.6-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gsi-proxy-ssl (5.6-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-gsi-proxy-ssl (5.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:40 -0400

globus-gsi-proxy-ssl (5.5-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:29 -0400

globus-gsi-proxy-ssl (5.4-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:55 -0400

globus-gsi-proxy-ssl (5.4-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:41 -0500

globus-gsi-proxy-ssl (5.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 18:30:39 -0500

globus-gsi-proxy-ssl (5.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Mon, 10 Feb 2014 14:07:15 -0500

globus-gsi-proxy-ssl (5.0-2+gt6.@distro@) @distro@; urgency=low

  * Fix doxygen packaging issue

 -- Globus Toolkit <support@globus.org>  Mon, 27 January 2014 14:20:44 -0500
